# cpp_labs

./: .gitignore
MyFirstProg/: CMakeLists.txt
final/: CMakeLists.txt  main.cpp
final/include/: AddressBook.h  AddressBookInterface.h  Person.h  Student.h  Teacher.h  University.h
final/src/: AddressBook.cpp  AddressBookInterface.cpp  Student.cpp  Teacher.cpp  University.cpp
lab1-1/: CMakeLists.txt  main.cpp
lab10/lab10_1/: CMakeLists.txt  Dot.cpp  Dot.h  Triangle.cpp  Triangle.h  TriangleAgg.cpp  TriangleAgg.h  main.cpp
lab11/lab11_1/: CMakeLists.txt  Time.cpp  Time.h  main.cpp
lab11/lab11_2/: CMakeLists.txt  Point.cpp  Point.h  main.cpp
lab12/lab12_1/: CMakeLists.txt  Human.h  Student.h  Teacher.h  main.cpp
lab14/lab14_1/: ArrayProcessor.h  CMakeLists.txt  main.cpp
lab14/lab14_2/: CMakeLists.txt  Print.h  main.cpp
lab15/lab15_1/: CMakeLists.txt  main.cpp
lab2/lab2-1/: CMakeLists.txt  main.cpp
lab2/lab2-2/: CMakeLists.txt  main.cpp
lab2/lab2-3/: CMakeLists.txt  main.cpp
lab2/lab2-4/: CMakeLists.txt  main.cpp
lab3/lab3-1/: CMakeLists.txt  main.cpp
lab3/lab3-2/: CMakeLists.txt  main.cpp
lab3/lab3-3/: CMakeLists.txt  main.cpp
lab3/lab3-4/: CMakeLists.txt  main.cpp
lab3/lab3-5/: CMakeLists.txt  main.cpp
lab4/lab4-1/: CMakeLists.txt  MyRoot.cpp  MyRoot.h  main.cpp
lab4/lab4-2/: CMakeLists.txt  Input.cpp  Input.h  main.cpp
lab5/lab5-1/: CMakeLists.txt  lab.cpp  lab.h  main.cpp  task1.cpp  task1.h
lab5/lab5_2/: CMakeLists.txt  lab.cpp  lab.h  main.cpp
lab5/lab5_3/: CMakeLists.txt  lab.cpp  lab.h  main.cpp
lab5/lab5_4/: lab.cpp  (+3 more)
(+36 files in other folders)
